# 3d_obj_cubemap

./: CMakeLists.txt  README.md  environment.h  main.cpp  object_loader.h  textures.h
shaders/: environment.vs  obj.fs
